Cleanup and full screen on OSX shared context creation fix.
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/examples/eqAsync/README
+++ b/examples/eqAsync/README
@@ -1,3 +1,7 @@
 
                     Equalizer asynchronous fetcher Example
 
+The example shows how to create shared per-GPU context and use 
+it in parallel thread to load textures.
+
+Main idea is to create shared FBO window from a given window.
