Missing files from: 1.0 Fedora/RPM porting
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,10 +7,13 @@ Cedric Stalder
 Maxim Makhinya
 Stefan Eilemann
 
+-------- Version 1.0.2 --------
+
+Jaroslav Skarvada
+
 -------- Version 1.0.1 --------
 
 Daniel Nachbaur
-Jaroslav Skarvada
 
 -------- Version 1.0-beta --------
 
