--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,7 +2,7 @@
 This file lists all changes in the public Equalizer API, latest on top:
 
 07/Sep/2012
-  Removed COMMANDTYPE_EQ_CUSTOM. Use COMMANDTYPE_CO_CUSTOM instead.
+  Removed COMMANDTYPE_EQ_CUSTOM. Use co::COMMANDTYPE_CUSTOM instead.
 
 06/Sep/2012
   New API in eq::Config & seq::ViewData for event handling. sendEvent() &
