--- a/libs/RelNotes.dox
+++ b/libs/RelNotes.dox
@@ -170,18 +170,24 @@
   Equalizer 1.4.1 includes the following bugfixes over the 1.4 release:
 </p>
 <ul>
+  <li><a href="https://github.com/Eyescale/Equalizer/issues/180">180</a>:
+    Launch error with empty host for a node bug</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/179">179</a>:
     Readback of non-modulo-4 images broken</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/175">175</a>:
     "--eq-logfile" followed by no other argument segfaults</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/162">162</a>:
     WGL window compile error</li>
+  <li><a href="https://github.com/Eyescale/Equalizer/issues/161">161</a>:
+    eqPly crash on model load on Win32</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/160">160</a>:
     Memleak with pipe thread affinity</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/159">159</a>:
     exPixelBench crashes</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/158">158</a>:
     Non-freed GPUCompressors after application exit</li>
+  <li><a href="https://github.com/Eyescale/Equalizer/issues/138">138</a>:
+    Windows: PBO error when rendering</li>
 </ul>
 <p>
   Equalizer 1.4 includes various bugfixes over the 1.2.1 release, including the
@@ -226,8 +232,10 @@
   find any other issue with this release.
 </p>
 <ul>
-  <li><a href="https://github.com/Eyescale/Equalizer/issues/138">138</a>:
-    Windows: PBO error when rendering</li>
+  <li><a href="https://github.com/Eyescale/Equalizer/issues/177">177</a>:
+    Occasional async readback deadlocks on GLX</li>
+  <li><a href="https://github.com/Eyescale/Equalizer/issues/167">167</a>:
+    HWLOC: Segmentation Fault with empty auto thread affinity</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/78">78</a>: AGL:
     assertion on interaction with multiple GPUs</li>
   <li><a href="https://github.com/Eyescale/Equalizer/issues/77">77</a>:
