--- a/AUTHORS
+++ b/AUTHORS
@@ -6,9 +6,19 @@
 Daniel Nachbaur
 Stefan Eilemann
 
-------- Version 1.4 -------
+------- Version 1.6 -------
 
 Ahmet Bilgili
+Carsten Rohn
+Fabien Delalondre
+Jafet Villafranca
+Juan Hernando
+Lucas Peetz Dulley
+Marc Treib
+nikolay_lukash
+
+------- Version 1.4 -------
+
 Dardo D. Kleiner
 Martin Lambers
 Marwan Abdellah
@@ -18,7 +28,6 @@ Maxim Makhinya
 
 Daniel Pfeifer
 Jaroslav Skarvada
-Lucas Peetz Dulley
 Matthew Dawson
 
 -------- Version 1.0 --------
@@ -32,10 +41,8 @@ Robert Hauck
 -------- Version 1.0-alpha --------
 
 Andreas Kirsch
-Carsten Rohn
 Christian Vix
 Jens Willebrand
-Marc Treib
 Paul E.C. Melis
 Philippe Robert
 Sarah Amsellem
