Changes for latest Collage cleanups

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,31 @@
 
 This file lists all changes in the public Equalizer API, latest on top:
 
+  [Collage 5bb65c6] Remove most legacy EQ_ defines. Use lunchbox
+  namespace for co::base and co::Global.
+
+  [Collage 6f82b69] Remove legacy EQ_ macros: EQ_STDEXT_NAMESPACE_OPEN
+  EQ_STDEXT_NAMESPACE_CLOSE EQ_MIN EQ_MAX EQ_MAX_UINT32 EQ_BIT1 EQ_BIT2
+  EQ_BIT3 EQ_BIT4 EQ_BIT5 EQ_BIT6 EQ_BIT7 EQ_BIT8 EQ_BIT9 EQ_BIT10
+  EQ_BIT11 EQ_BIT12 EQ_BIT13 EQ_BIT14 EQ_BIT15 EQ_BIT16 EQ_BIT17
+  EQ_BIT18 EQ_BIT19 EQ_BIT20 EQ_BIT21 EQ_BIT22 EQ_BIT23 EQ_BIT24
+  EQ_BIT25 EQ_BIT26 EQ_BIT27 EQ_BIT28 EQ_BIT29 EQ_BIT30 EQ_BIT31
+  EQ_BIT32 EQ_BIT33 EQ_BIT34 EQ_BIT35 EQ_BIT36 EQ_BIT37 EQ_BIT38
+  EQ_BIT39 EQ_BIT40 EQ_BIT41 EQ_BIT42 EQ_BIT43 EQ_BIT44 EQ_BIT45
+  EQ_BIT46 EQ_BIT47 EQ_BIT48 EQ_BIT_ALL_32 EQ_BIT_ALL_64 EQ_BIT_NONE
+  EQ_TS_VAR EQ_TS_SCOPED EQ_TS_RESET EQ_TS_THREAD EQ_TS_NOT_THREAD
+  EQ_ALIGN8 EQ_ALIGN16 EQ_TIMEOUT_INDEFINITE EQ_TIMEOUT_DEFAULT
+  EQ_DLLIMPORT EQ_DLLEXPORT EQ_UNDEFINED_UINT32 EQ_GCC_4_0_OR_LATER
+  EQ_GCC_4_1_OR_LATER EQ_GCC_4_2_OR_LATER EQ_GCC_4_3_OR_LATER
+  EQ_GCC_4_4_OR_LATER EQ_GCC_4_5_OR_LATER EQ_GCC_4_6_OR_LATER
+  EQ_GCC_4_7_OR_LATER EQ_GCC_4_8_OR_LATER EQ_GCC_4_9_OR_LATER EQ_1KB
+  EQ_10KB EQ_100KB EQ_1MB EQ_10MB EQ_100MB EQ_16KB EQ_32KB EQ_64KB
+  EQ_128KB EQ_48MB EQ_64MB EQ_ASSERT EQ_ASSERTINFO EQ_ERROR EQ_WARN
+  EQ_INFO EQ_VERB EQ_CHECK EQ_UNIMPLEMENTED EQ_UNREACHABLE EQ_DONTCALL
+  EQ_ABORT EQ_LOG EQ_SAFECAST
+
+  Replace EQ_ with LB_
+
 03/Dec/2012
   Remove ...,     fabric::View::getEqualizer()(::getTileSize( ))
 
