--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,12 @@ This file lists all changes in the public Equalizer API, latest on top:
 
 -----------------------------------2.0-------------------------------------
 
+08/Aug/2013
+  [007e813] Remove deprecated window system types. Use their current
+  counterpart in the eq::agl, eq::glx and eq::wgl namespaces. Moved
+  XGetCurrentDisplay() and SetCurrentDisplay() from the eq to the
+  eq::glx namespace.
+
 06/Aug/2013
   [Collage 5bb65c6] Remove most legacy EQ_ defines. Use lunchbox
   namespace for co::base and co::Global.
